ProjetCompil/Gencode/Test/success/src/convertion.cas
program
	i : real;
	j : 1..5;
begin
	read(j);
	i := j;
	write(i);
end.
