ProjetCompil/Gencode/Test/fail/src/borneInterval.cas
program
    J : 2 .. 5;
	K : integer;
begin
    K := 0 ;
	J := 0 ;
end.